--- a/CleanFolders.csproj
+++ b/CleanFolders.csproj
@@ -136,6 +136,11 @@
     <Content Include="App.ico" />
     <Content Include="Images\image1.png" />
     <Content Include="Images\image2.png" />
+    <Content Include="Images\image3.png" />
+    <Content Include="Images\image4.png" />
+    <Content Include="Images\image5.png" />
+    <Content Include="Images\image6.png" />
+    <Content Include="Images\image7.png" />
     <Content Include="license.txt" />
     <Content Include="Resources\File.ico" />
     <Content Include="Resources\Folder.ico" />
